objects/Order_Event__e/Order_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event on Order Object to be consumed by Workato</description>
    <label>Order Event</label>
    <pluralLabel>Order Events</pluralLabel>
</CustomObject>