objects/Order_Event__e/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Account Name</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>