objects/Order_Event__e/fields/Account_Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Netsuite_ID__c</fullName>
    <description>Account Netsuite ID</description>
    <label>Account Netsuite ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>