objects/Order_Event__e/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>Account Segment</description>
    <label>Account Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>