objects/Order_Event__e/fields/Opportunity_Cam_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Cam_Name__c</fullName>
    <description>Opportunity Cam Name</description>
    <label>Opportunity Cam Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>