objects/Order_Event__e/fields/Opportunity_Cam_NS_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Cam_NS_ID__c</fullName>
    <description>Opportunity Cam NS ID</description>
    <label>Opportunity Cam NS ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>