objects/Order_Event__e/fields/Order_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Entity_ID__c</fullName>
    <description>Order Entity ID</description>
    <label>Order Entity ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>