objects/Order_Event__e/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <description>Order Id</description>
    <label>Order ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>