objects/Order_Event__e/fields/Order_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>Order_OrderNumber__c</fullName>
    <description>Order OrderNumber</description>
    <label>Order OrderNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>