objects/Order_Event__e/fields/Order_Owner_Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Department_ID__c</fullName>
    <description>Order Owner Department ID</description>
    <label>Order Owner Department ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>