objects/Order_Event__e/fields/Order_Owner_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_Location_ID__c</fullName>
    <description>Owner Location ID</description>
    <label>Order Owner Location ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>