objects/Order_Event__e/fields/Order_Owner_NS_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner_NS_ID__c</fullName>
    <description>Owner NS ID</description>
    <label>Order Owner NS ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>