objects/Order_Event__e/fields/Order_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Order_Subsidiary__c</fullName>
    <description>Order Subsidiary</description>
    <label>Order Subsidiary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>