objects/Order_Event__e/fields/Quote_Bill_To_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Quote_Bill_To_Address_2__c</fullName>
    <description>Quote Bill_To_Address_2</description>
    <label>Quote Bill_To_Address_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>