objects/Order_Event__e/fields/Quote_Bill_To_Attn__c.field-meta.xml
<CustomField>
    <fullName>Quote_Bill_To_Attn__c</fullName>
    <description>Quote Bill_To_Attn</description>
    <label>Quote Bill To Attn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>