objects/Order_Event__e/fields/Quote_BillingName__c.field-meta.xml
<CustomField>
    <fullName>Quote_BillingName__c</fullName>
    <description>Quote BillingName</description>
    <label>Quote BillingName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>