objects/Order_Event__e/fields/Quote_BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Quote_BillingPostalCode__c</fullName>
    <description>Quote BillingPostalCode</description>
    <label>Quote BillingPostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>