objects/Order_Event__e/fields/Quote_BillingState__c.field-meta.xml
<CustomField>
    <fullName>Quote_BillingState__c</fullName>
    <description>Quote BillingState</description>
    <label>Quote BillingState</label>
    <length>80</length>
    <type>Text</type>
</CustomField>