objects/Order_Event__e/fields/Quote_End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>Quote_End_User_Account__c</fullName>
    <description>Quote End User Account</description>
    <label>Quote End User Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>