objects/Order_Event__e/fields/Quote_Max_Computed_Term__c.field-meta.xml
<CustomField>
    <fullName>Quote_Max_Computed_Term__c</fullName>
    <description>Quote Max Computed Term</description>
    <label>Quote Max Computed Term</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>