objects/Order_Event__e/fields/Quote_Max_End__c.field-meta.xml
<CustomField>
    <fullName>Quote_Max_End__c</fullName>
    <description>Quote Max End Date</description>
    <label>Quote Max End Date</label>
    <type>Date</type>
</CustomField>