objects/Order_Event__e/fields/Quote_Min_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Min_Start_Date__c</fullName>
    <description>Quote Min Start Date</description>
    <label>Quote Min Start Date</label>
    <type>Date</type>
</CustomField>