objects/Order_Event__e/fields/Quote_Pricebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_Pricebook_ID__c</fullName>
    <description>Quote Pricebook ID</description>
    <label>Quote Pricebook ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>