objects/Order_Event__e/fields/Quote_PricebookId__c.field-meta.xml
<CustomField>
    <fullName>Quote_PricebookId__c</fullName>
    <description>Quote PricebookId</description>
    <label>Quote PricebookId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>