objects/Order_Event__e/fields/Quote_Ship_To_Attn__c.field-meta.xml
<CustomField>
    <fullName>Quote_Ship_To_Attn__c</fullName>
    <description>Quote Ship To Attn</description>
    <label>Quote Ship To Attn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>