objects/Order_Event__e/fields/Quote_ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>Quote_ShippingCity__c</fullName>
    <description>Quote ShippingCity</description>
    <label>Quote ShippingCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>